--- a/src/components/Post/Post.css
+++ b/src/components/Post/Post.css
@@ -11,7 +11,7 @@
     border-radius: 10px;
 }
 
-.PostDetail{
+.PostDetails{
     display: flex;
     flex-direction: column;
     align-items: center;
