--- a/src/components/Bar/Bar.css
+++ b/src/components/Bar/Bar.css
@@ -2,7 +2,7 @@
     flex: 3;
     margin: 20px;
     padding-bottom: 30px;
-    background-color: #eee;
+    /* background-color: #eee; */
     border-radius: 10px;
     display: flex;
     flex-direction: column;
@@ -33,7 +33,6 @@
     width: 80%;
     height: 200px;
     margin-top: 15px;
-    border: 1px solid #a7a4a4;
     border-radius: 10px;
 }
 
